# Multi-coding-agent-from-scratch

./: .env.example  .gitignore  README.md  claude.md  example_llm.py  main.py  pyproject.toml
agents/: __init__.py  base.py  bash_agent.py  code_review_agent.py  coding_agent.py  documentation_agent.py  project_architect_agent.py  review_agent.py  summary_agent.py  test_agent.py
code_test/: agent.spec.md
code_test/app/: main.py  spec.md
code_test/tests/: spec.md  test_placeholder.py
configs/: __init__.py  logging.json  orchestrator.json
llm/: __init__.py  base.py
llm/provider/: __init__.py  gemini.py  gemini_langchain.py  openai.py  openai_langchain.py
log_set/: __init__.py  setup.py
mcp/: client.py  test.py  weather.py
mcp_sv/: __init__.py  base.py  mcp_server.py
orchestrator/: planner.py
orchestrator_flow/: orchestrator.py  planner.py  react_agent_runtime.py  state.py
prompts/: __init__.py
prompts/llm_systems/: coding_agent.md  documentation_agent.md  planner.md  project_architect.md  review_agent.md  summary_agent.md  testing_agent.md
schemas/agents/: planner_response.py
schemas/llm/: llm_message.py  llm_response.py
schemas/orchestrator/: config.py  state_graph.py
schemas/tools/: bash.py
skill/: __init__.py
tests/functional_test/: mcp_git_test.py  test_llm_langchain.py  test_llm_normal.py  test_mcp_serrver.py  test_run_mcp_server.py
tools/: __init__.py  base.py  registry.py
tools/bash/: copy_file.py  create_directory.py  delete_file.py  find_file.py  find_symbol.py  kill_process.py  list_directory.py  ls.py  move_file.py  pwd.py  (+4 more)
(+31 files in other folders)
