[project]
name = "multi-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "mcp[cli]>=1.27.0",
    "openai>=1.60.0",
    "requests>=2.33.1",
    "ruff>=0.15.12",
]
